# CivicPulse

./: .gitignore  README.md
client/: README.md  index.html
client/src/: App.tsx  index.css
client/src/components/: AIInsights.tsx  ChatSidebar.tsx  DashboardExport.tsx  DashboardHeader.tsx  MetricsOverview.tsx  ProtectedRoute.tsx  RecentMentions.tsx  SentimentChart.tsx  SourceBreakdown.tsx  TopicsWordCloud.tsx
client/src/contexts/: AuthContext.tsx  LanguageContext.tsx
client/src/lib/: api.ts  translations.ts  utils.ts
client/src/pages/: Index.tsx  Login.tsx  Register.tsx
scraping/: cleaned_rijswijk_data.csv  combined_rijswijk_data.csv  reddit-clean-scraper.py  reddit-scraping.ipynb  rijsvijik-pois.ipynb  rijswijk_pois.csv
server/: .env.example  main.py  pyproject.toml
server/api/: auth.py  dashboard.py
server/api/v1/: chat.py  retrieval.py
server/core/: __init__.py  auth.py  config.py
server/db/: __init__.py  chroma_ingest.py  database.py  models.py
server/models/: user.py
