[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "pydantic-settings>=2.0.0",
    "psycopg2>=2.9.11",
]
